<resources>
    <string name="app_name">PocketArcade</string>

    <!-- Game Global -->
    <string name="you_won">You won!</string>
    <string name="game_over">Game over!</string>
    <string name="game_over_caps">GAME OVER!</string>

    <!-- Game Setup Tic Tace Toe-->
    <string name="number_of_players">Number of Players</string>
    <string name="one_player">1 Player</string>
    <string name="two_players">2 Players</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_2_name">Player 2 Name</string>

    <!-- Tic Tac Toe -->
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="tic_tac_toe_title">Tic-Tac-Toe</string>

    <!-- Game Setup Hangman -->
    <string name="enter_player_name">Enter your player name</string>
    <string name="player_name">Player Name</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="very_hard">Very Hard • 4 tries</string>
    <string name="hard">Hard • 6 tries</string>
    <string name="normal">Normal • 8 tries</string>
    <string name="easy">Easy • 10 tries</string>
    <string name="very_easy">Very Easy • 11 tries</string>

    <!-- Hangman -->
    <string name="hangman">Hangman</string>
    <string name="letter">Letter</string>
    <string name="guess">Guess</string>
    <string name="hangman_image">Hangman image</string>
    <string name="hangman_incorrect">Incorrect: %1$d / %2$d</string>

    <!-- Memory -->
    <string name="memory">Memory</string>

    <!-- Buttons -->
    <string name="start_game">Start Game</string>
    <string name="restart">Restart</string>
    <string name="close_game">Close Game</string>
</resources>